Moved authenticateApp() function from App.js to SearchBar.js. This ensures that App is visible on mount and ONLY checks for authentication WHEN user tries to use search bar to find tracks.
Also cleaned up the code in various other places.

--- a/src/App/App.css
+++ b/src/App/App.css
@@ -7,7 +7,7 @@
 
 
 /* Styling for header text on top of App */
-h1 { 
+#App-header-title { 
     margin-top: 0;              /* No margin/white-space on top of h1 */
     text-align: center;         /* Text is centered */
     font-family: 'Poppins';     /* font style for <h1> header */
@@ -15,6 +15,13 @@ h1 {
     background-color: #000;   /* black for <h1> background color*/
     color: #fff;              /* White text color */
     border-bottom: #fff 3px dashed; /* White dashed bottom border line under <h1>*/
+}
+
+
+@media screen and (max-width: 520px) { /* shrinks and scales header title as screen width shrinks*/
+    #App-header-title { 
+        font-size: clamp(2rem, 12vw, 4rem);
+    }
 }
 
 .App {
@@ -54,13 +61,13 @@ h1 {
     }
 }
 
-@media screen and (min-width: 320px) and (max-width: 490px) {
+@media screen and (max-width: 490px) {
 
     /* Increase .App width due to smaller screen width */
     .App { width: 88%;}
 
     /* Modify margin space under header title and before search text box */
-    h1 { margin-bottom: 0.8rem; }
+    #App-header-title { margin-bottom: 0.8rem; }
 
     .SearchOutput-and-Playlist { /* Make class's width match parent .App class */
         width: 100%;
