--- a/src/components/Playlist/Playlist.css
+++ b/src/components/Playlist/Playlist.css
@@ -128,7 +128,7 @@
 /*********************************************************************************/
 /*********************************************************************************/
 
-@media screen and (min-width: 320px) and (max-width: 719px) {
+@media screen and (max-width: 719px) {
     .Playlist {
         /* Below setup ensures that .Search-Results
            expands between 300-500px height */
@@ -138,7 +138,7 @@
     }
 }
 
-@media screen and (min-width: 320px) and (max-width: 490px) {
+@media screen and (max-width: 490px) {
      /* For mobile screen, take as much width as possible.*/
     .Playlist {
         display: flex;
