--- a/src/components/SearchResults/SearchResults.css
+++ b/src/components/SearchResults/SearchResults.css
@@ -61,7 +61,7 @@
 /*********************************************************************************/
 /*********************************************************************************/
 
-@media screen and (min-width: 320px) and (max-width: 719px) {
+@media screen and (max-width: 719px) {
     .Search-Results {
         margin-bottom: 40px; /* Margin above <Playlist> component */  
 
@@ -73,7 +73,7 @@
     }
 }
 
-@media screen and (min-width: 320px) and (max-width: 490px) {
+@media screen and (max-width: 490px) {
 
      /* For mobile screen, take as much width as possible.*/
     .Search-Results {
